--- a/playing/doramaslove-jokbuy.html
+++ b/playing/doramaslove-jokbuy.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>How To Play Videos in DoramasLove</h1>
+<h1>Cómo reproducir vídeos en DoramasLove</h1>
 <p>Al dar la bienvenida al 2024, el mundo del cine se llena de anticipación y emoción con una serie de nuevas películas listas para entretener al público. Esta última lista de películas es tentadora con varios géneros e historias interesantes que están listas para sorprender a la audiencia. Desde películas épicas que deleitan a los amantes de las aventuras hasta dramas profundos que despiertan emociones, 2024 promete entretenimiento sin límites.
 
 Los principales cineastas presentarán sus obras maestras, presentando impresionantes actuaciones, cinematografía impresionante y emocionantes efectos visuales. El público puede esperar películas de gran éxito que cuentan historias llenas de acción, intriga y suspenso. Mientras tanto, las películas de comedia brindarán risas imparables, presentando historias hilarantes que cautivan al público de principio a fin.
