--- a/playing/doramas-dragon.html
+++ b/playing/doramas-dragon.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>How To Play Videos in DoramasFlix</h1>
+<h1>Cómo reproducir vídeos en DoramasFlix</h1>
 <p>Al dar la bienvenida al año 2024, la industria cinematográfica se llena de expectativas y emoción debido a una serie de nuevas películas listas para cautivar al público. Esta fresca lista de películas es irresistible con su variedad de géneros e historias fascinantes, todas preparadas para sorprender a la audiencia. Desde películas épicas que deleitarán a los amantes de las aventuras hasta dramas conmovedores que despertarán profundas emociones, el año 2024 promete un entretenimiento sin fronteras.
 
 Los cineastas de renombre presentarán sus obras maestras, ofreciendo actuaciones impresionantes, cinematografía deslumbrante y efectos visuales emocionantes. El público puede esperar películas de gran éxito que narran historias llenas de acción, intriga y suspenso. Mientras tanto, las comedias harán reír sin parar, presentando historias hilarantes que captarán la atención del público de principio a fin.
